[package]
name = "haystackdb"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-unknown-linux-gnu"
flags = ["-C", "target-cpu=native"]

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
memmap = "0.7.0"
log = "0.4.14"
fs2 = "0.4.0"
env_logger = "0.11.3"
serde_json = "1.0.68"
ahash = "0.8.11"
rand = "0.8.4"
rusqlite = "0.31.0"
chrono = "0.4"
brotli = "6.0.0"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

# [profile.dev]
# debug = true

# [[bench]]
# name = "hamming_distance"
# harness = false

# [[bench]]
# name = "gemv"
# harness = false

# [[bench]]
# name = "gemm"
# harness = false


[dev-dependencies]
criterion = "0.5.1"
